test/org/midica/testfiles/failing/eff-func-param-invalid-2.midica
INCLUDE inc/instruments.midica


0: vol.line(1,0x7F)
